--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,26 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_screenutil: ^5.9.3
+  flutter_secure_storage: ^9.2.4
   flutter_svg: ^2.2.1
+  freezed: ^3.2.3
+  freezed_annotation: ^3.1.0
   go_router: ^16.2.4
   google_nav_bar: ^5.0.7
+  json_annotation: ^4.9.0
+  logger: ^2.6.2
+  pretty_dio_logger: ^1.4.0
+  retrofit: ^4.7.3
   shared_preferences: ^2.5.3
 
 dev_dependencies:
+  build_runner: ^2.9.0
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^3.2.3
+  json_serializable: ^6.11.1
+  retrofit_generator: ^10.0.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
