--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.2.1
   freezed: ^3.2.3
   freezed_annotation: ^3.1.0
+  get_it: ^8.2.0
   go_router: ^16.2.4
   google_nav_bar: ^5.0.7
   json_annotation: ^4.9.0
