handle logic for Verify Otp, Verify Email, and Resend Otp features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_nav_bar: ^5.0.7
   json_annotation: ^4.9.0
   logger: ^2.6.2
+  pinput: ^5.0.2
   pretty_dio_logger: ^1.4.0
   retrofit: ^4.7.3
   shared_preferences: ^2.5.3
@@ -52,7 +53,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^3.2.3
   json_serializable: ^6.11.1
   retrofit_generator: ^10.0.6
 
